k8s/worker.depl..yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
        - name: worker
          image: walosha/multi-worker
