k8s/postgres-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      volumes:
        - name: persistent-postgres
          persistentVolumeClaim:
            claimName: database-pvc
      containers:
        - name: postgres
          image: postgres
          resources:
            limits:
              memory: 512Mi
              cpu: "1"
            requests:
              memory: 256Mi
              cpu: "0.2"
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: persistent-postgres
              mountPath: /var/lib/postgresql/data
              subPath: postgres
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-srv
spec:
  selector:
    app: postgres
  ports:
    - name: postgres
      protocol: TCP
      port: 5432
      targetPort: 5432
